# arxivbot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  _test_runner.py  arxiv_links.txt  credentials_template.env  example_s2_academic_api_response.json  ieee_api.py  main.py  migrate_notion_obsidian.py  notion_importer.py  papers.db  pyproject.toml  requirements.txt  template.env  test.py  utils.py
_notion-sdk-py-examples/: README.md  db_read.py  db_write.py
acl_wip/: Automatic_Gloss_Dictionary_for_Sign_Language_Learners___ACL_Anthology.html
acl_wip/Automatic_Gloss_Dictionary_for_Sign_Language_Learners___ACL_Anthology_files/: main.min.b1d14a9a8f6bb9c608ca4de9aad72a6e06945119f97951f2908522dc220e6277.css
arxivbot/: __init__.py  constants.py  credentials_template.env  database.py  find_arxiv_links.py  ieee_api.py  ieee_scrape.py  migrate_notion_obsidian.py  notion_importer.py  obsidian_importer.py  telegram_bot.py  utils.py
notion-sdk-py-examples/: authenication.py  page_read.py
notion_examples/: README.md  authenication.py  db_read.py  db_write.py  page_read.py  page_write.py
plans/: additional_features.md  ai_summary_generation.md  feature_requests.md  resources.md  s2_api_migration_reference.md  telegram-bot.md
scripts/: tsv2sqlite.py
tests/: test_find_arxiv_links.py  test_ieee_scrape.py  test_tsv2sqlite.py  test_utils.py
tests/example_inputs/ieee/: 9381661.html
