[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arxivbot"
authors = [{ name = "Anil Keshwani", email = "anilkeshwani@hotmail.com" }]
description = "A minimal paper clipper for Obsidian, powered by Semantic Scholar"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dynamic = ["dependencies", "version", "readme"]

[tool.setuptools.packages.find]
include = ["arxivbot*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }

[tool.setuptools_scm]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[project.scripts]
obsidian-import = "arxivbot.obsidian_importer:main"
